TOB-6523 Endepunkt for å hente bestillinger, utsendinger og uferdige bestillingsbatcher
